fix: iframe out of container
by adding property max-width:100%

--- a/src/components/App/style.scss
+++ b/src/components/App/style.scss
@@ -128,3 +128,7 @@ html[theme="light"] {
     max-width: 860px;
   }
 }
+
+iframe {
+  max-width: 100%;
+}
